apps/base/umami/ingressroute-internal.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami-internal
  namespace: apps
spec:
  entryPoints:
    - websecure-int
  routes:
    - match: Host(`analytics.local.kagiso.me`)
      kind: Rule
      services:
        - name: umami
          port: 3000
